fix gapping

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -89,6 +89,14 @@ li::marker {
 .what {
   font-size: 1rem;
   line-height: 1.5rem;
+  @media (min-width: $mantine-breakpoint-md) {
+    font-size: 1.5rem;
+    line-height: 1.9rem;
+  }
+  @media (min-width: $mantine-breakpoint-lg) {
+    font-size: 1rem;
+    line-height: 1.5rem;
+  }
 }
 .wp-block-image {
   margin-top: 2rem;
